<resources>
    <string name="app_name">SunnyWeather</string>
    <string name="ContentDescription">null</string>
    <string name="searchPlace_hint">输入地址</string>
    <string name="cannotSearchTip">未能查询到任何信息</string>
    <string name="forecast">预报</string>
    <string name="lifeIndex">生活指数</string>
    <string name="cold">感冒</string>
    <string name="dressing">穿衣</string>
    <string name="ultraviolet">紫外线</string>
    <string name="carWashing">洗车</string>
    <string name="humidity">湿度</string>
    <string name="visibility">能见度</string>
    <string name="apparentTemp">体感温度</string>
    <string name="wind">风力</string>
    <string name="air_quality">空气质量</string>
    <string name="polluteIndex">污染指数</string>
    <string name="pm25">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="o3">O3</string>
    <string name="so2">SO2</string>
    <string name="no2">NO2</string>
    <string name="co">CO</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>